# vizdem

./: README.md  pyproject.toml
src/perspecto/: __init__.py  base.py  cli.py  cpt.py
src/perspecto/modules/: colorbar.py  gdal_hillshade.py  geoshade.py  histogram.py  joy.py  shade.py
