[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "perspecto"
version = "0.1.3"
description = "Perspecto: Wisdom for your DEMs. Easy, aesthetic, and scientific visualizations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "rasterio",
    "click",
    "scipy",
    "fetchez",
]

[project.scripts]
perspecto = "perspecto.cli:main"

[project.entry-points."fetchez.plugins"]
perspecto = "perspecto"